[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isagellm-control-plane-benchmark"
version = "0.2.0.2"
description = "Control Plane scheduling benchmark for sageLLM (formerly isage-control-plane-benchmark)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "IntelliStream Team", email = "shuhao_zhang@hust.edu.cn" }]
keywords = [
    "sage",
    "benchmark",
    "control-plane",
    "scheduling",
    "evaluation",
    "intellistream",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "isage-common",
    "isage-kernel",
    "isage-middleware>=0.2.4.0",
    "isage-libs",
    "aiohttp>=3.9.0",
    "numpy>=1.26.0,<2.3.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "typer>=0.15.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jinja2>=3.1.0",
]

license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff==0.14.6",
    "pre-commit>=3.0.0",
    "types-PyYAML>=6.0.0",
    "isage-pypi-publisher>=0.2.0.0",
]

[project.urls]
Homepage = "https://github.com/intellistream/sagellm-control-plane-benchmark"
Documentation = "https://github.com/intellistream/sagellm-control-plane-benchmark#readme"
Repository = "https://github.com/intellistream/sagellm-control-plane-benchmark"
Issues = "https://github.com/intellistream/sagellm-control-plane-benchmark/issues"

[project.scripts]
sage-cp-bench = "sage.benchmark_control_plane.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sage*"]
namespaces = true

[tool.setuptools.dynamic]
version = { attr = "sage.benchmark_control_plane._version.__version__" }

[tool.setuptools.package-data]
"sage.benchmark_control_plane" = ["visualization/templates/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",
    "F401",
    "F403",
    "F405",
    "F841",
    "E712",
    "E402",
    "E741",
    "E722",
    "W293",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["-ra", "--verbose"]
